@@ -31,7 +31,7 @@ class IngestionClientRequestsTests {
   void init() {
     this.json = JsonMapper.builder().configure(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES, false).build();
     this.echo = new EchoInterceptor();
-    var options = ClientOptions.builder().setRequesterConfig(requester -> requester.addInterceptor(echo)).build();
+    ClientOptions options = ClientOptions.builder().setRequesterConfig(requester -> requester.addInterceptor(echo)).build();
     this.client = new IngestionClient("appId", "apiKey", "us", options);
   }
 
@@ -119,7 +119,7 @@ class IngestionClientRequestsTests {
           .setType(DestinationType.SEARCH)
           .setName("destinationName")
           .setInput(new DestinationIndexName().setIndexName("full_name______"))
-          .setTransformationIDs(List.of("6c02aeb1-775e-418e-870b-1faccd4b2c0f"))
+          .setTransformationIDs(Arrays.asList("6c02aeb1-775e-418e-870b-1faccd4b2c0f"))
       );
     });
     EchoResponse req = echo.getLastResponse();
@@ -144,8 +144,8 @@ class IngestionClientRequestsTests {
           .setName("sourceName")
           .setInput(
             new SourceCommercetools()
-              .setStoreKeys(List.of("myStore"))
-              .setLocales(List.of("de"))
+              .setStoreKeys(Arrays.asList("myStore"))
+              .setLocales(Arrays.asList("de"))
               .setUrl("http://commercetools.com")
               .setProjectKey("keyID")
           )
@@ -226,7 +226,8 @@ class IngestionClientRequestsTests {
           .setCron("* * * * *")
           .setAction(ActionType.REPLACE)
           .setInput(
-            new DockerStreamsInput().setStreams(List.of(new DockerStreams().setName("foo").setSyncMode(DockerStreamsSyncMode.INCREMENTAL)))
+            new DockerStreamsInput()
+              .setStreams(Arrays.asList(new DockerStreams().setName("foo").setSyncMode(DockerStreamsSyncMode.INCREMENTAL)))
           )
       );
     });
@@ -327,7 +328,8 @@ class IngestionClientRequestsTests {
           .setTrigger(new OnDemandTriggerInput().setType(OnDemandTriggerType.ON_DEMAND))
           .setAction(ActionType.REPLACE)
           .setInput(
-            new DockerStreamsInput().setStreams(List.of(new DockerStreams().setName("foo").setSyncMode(DockerStreamsSyncMode.INCREMENTAL)))
+            new DockerStreamsInput()
+              .setStreams(Arrays.asList(new DockerStreams().setName("foo").setSyncMode(DockerStreamsSyncMode.INCREMENTAL)))
           )
       );
     });
@@ -373,7 +375,14 @@ class IngestionClientRequestsTests {
   @DisplayName("allow del method for a custom path with all parameters")
   void customDeleteTest1() {
     assertDoesNotThrow(() -> {
-      client.customDelete("test/all", Map.of("query", "parameters"));
+      client.customDelete(
+        "test/all",
+        new HashMap() {
+          {
+            put("query", "parameters");
+          }
+        }
+      );
     });
     EchoResponse req = echo.getLastResponse();
     assertEquals("/test/all", req.path);
@@ -409,7 +418,14 @@ class IngestionClientRequestsTests {
   @DisplayName("allow get method for a custom path with all parameters")
   void customGetTest1() {
     assertDoesNotThrow(() -> {
-      client.customGet("test/all", Map.of("query", "parameters with space"));
+      client.customGet(
+        "test/all",
+        new HashMap() {
+          {
+            put("query", "parameters with space");
+          }
+        }
+      );
     });
     EchoResponse req = echo.getLastResponse();
     assertEquals("/test/all", req.path);
@@ -438,10 +454,14 @@ class IngestionClientRequestsTests {
     assertDoesNotThrow(() -> {
       client.customGet(
         "test/all",
-        Map.of("query", "to be overriden"),
+        new HashMap() {
+          {
+            put("query", "to be overriden");
+          }
+        },
         new RequestOptions()
           .addExtraQueryParameters("query", "parameters with space")
-          .addExtraQueryParameters("and an array", List.of("array", "with spaces"))
+          .addExtraQueryParameters("and an array", Arrays.asList("array", "with spaces"))
           .addExtraHeader("x-header-1", "spaces are left alone")
       );
     });
@@ -496,7 +516,19 @@ class IngestionClientRequestsTests {
   @DisplayName("allow post method for a custom path with all parameters")
   void customPostTest1() {
     assertDoesNotThrow(() -> {
-      client.customPost("test/all", Map.of("query", "parameters"), Map.of("body", "parameters"));
+      client.customPost(
+        "test/all",
+        new HashMap() {
+          {
+            put("query", "parameters");
+          }
+        },
+        new HashMap() {
+          {
+            put("body", "parameters");
+          }
+        }
+      );
     });
     EchoResponse req = echo.getLastResponse();
     assertEquals("/test/all", req.path);
@@ -522,8 +554,16 @@ class IngestionClientRequestsTests {
     assertDoesNotThrow(() -> {
       client.customPost(
         "test/requestOptions",
-        Map.of("query", "parameters"),
-        Map.of("facet", "filters"),
+        new HashMap() {
+          {
+            put("query", "parameters");
+          }
+        },
+        new HashMap() {
+          {
+            put("facet", "filters");
+          }
+        },
         new RequestOptions().addExtraQueryParameters("query", "myQueryParameter")
       );
     });
@@ -554,8 +594,16 @@ class IngestionClientRequestsTests {
     assertDoesNotThrow(() -> {
       client.customPost(
         "test/requestOptions",
-        Map.of("query", "parameters"),
-        Map.of("facet", "filters"),
+        new HashMap() {
+          {
+            put("query", "parameters");
+          }
+        },
+        new HashMap() {
+          {
+            put("facet", "filters");
+          }
+        },
         new RequestOptions().addExtraQueryParameters("query2", "myQueryParameter")
       );
     });
@@ -586,8 +634,16 @@ class IngestionClientRequestsTests {
     assertDoesNotThrow(() -> {
       client.customPost(
         "test/requestOptions",
-        Map.of("query", "parameters"),
-        Map.of("facet", "filters"),
+        new HashMap() {
+          {
+            put("query", "parameters");
+          }
+        },
+        new HashMap() {
+          {
+            put("facet", "filters");
+          }
+        },
         new RequestOptions().addExtraHeader("x-algolia-api-key", "myApiKey")
       );
     });
@@ -629,8 +685,16 @@ class IngestionClientRequestsTests {
     assertDoesNotThrow(() -> {
       client.customPost(
         "test/requestOptions",
-        Map.of("query", "parameters"),
-        Map.of("facet", "filters"),
+        new HashMap() {
+          {
+            put("query", "parameters");
+          }
+        },
+        new HashMap() {
+          {
+            put("facet", "filters");
+          }
+        },
         new RequestOptions().addExtraHeader("x-algolia-api-key", "myApiKey")
       );
     });
@@ -672,8 +736,16 @@ class IngestionClientRequestsTests {
     assertDoesNotThrow(() -> {
       client.customPost(
         "test/requestOptions",
-        Map.of("query", "parameters"),
-        Map.of("facet", "filters"),
+        new HashMap() {
+          {
+            put("query", "parameters");
+          }
+        },
+        new HashMap() {
+          {
+            put("facet", "filters");
+          }
+        },
         new RequestOptions().addExtraQueryParameters("isItWorking", true)
       );
     });
@@ -704,8 +776,16 @@ class IngestionClientRequestsTests {
     assertDoesNotThrow(() -> {
       client.customPost(
         "test/requestOptions",
-        Map.of("query", "parameters"),
-        Map.of("facet", "filters"),
+        new HashMap() {
+          {
+            put("query", "parameters");
+          }
+        },
+        new HashMap() {
+          {
+            put("facet", "filters");
+          }
+        },
         new RequestOptions().addExtraQueryParameters("myParam", 2)
       );
     });
@@ -736,9 +816,17 @@ class IngestionClientRequestsTests {
     assertDoesNotThrow(() -> {
       client.customPost(
         "test/requestOptions",
-        Map.of("query", "parameters"),
-        Map.of("facet", "filters"),
-        new RequestOptions().addExtraQueryParameters("myParam", List.of("b and c", "d"))
+        new HashMap() {
+          {
+            put("query", "parameters");
+          }
+        },
+        new HashMap() {
+          {
+            put("facet", "filters");
+          }
+        },
+        new RequestOptions().addExtraQueryParameters("myParam", Arrays.asList("b and c", "d"))
       );
     });
     EchoResponse req = echo.getLastResponse();
@@ -768,9 +856,17 @@ class IngestionClientRequestsTests {
     assertDoesNotThrow(() -> {
       client.customPost(
         "test/requestOptions",
-        Map.of("query", "parameters"),
-        Map.of("facet", "filters"),
-        new RequestOptions().addExtraQueryParameters("myParam", List.of(true, true, false))
+        new HashMap() {
+          {
+            put("query", "parameters");
+          }
+        },
+        new HashMap() {
+          {
+            put("facet", "filters");
+          }
+        },
+        new RequestOptions().addExtraQueryParameters("myParam", Arrays.asList(true, true, false))
       );
     });
     EchoResponse req = echo.getLastResponse();
@@ -800,9 +896,17 @@ class IngestionClientRequestsTests {
     assertDoesNotThrow(() -> {
       client.customPost(
         "test/requestOptions",
-        Map.of("query", "parameters"),
-        Map.of("facet", "filters"),
-        new RequestOptions().addExtraQueryParameters("myParam", List.of(1, 2))
+        new HashMap() {
+          {
+            put("query", "parameters");
+          }
+        },
+        new HashMap() {
+          {
+            put("facet", "filters");
+          }
+        },
+        new RequestOptions().addExtraQueryParameters("myParam", Arrays.asList(1, 2))
       );
     });
     EchoResponse req = echo.getLastResponse();
@@ -842,7 +946,19 @@ class IngestionClientRequestsTests {
   @DisplayName("allow put method for a custom path with all parameters")
   void customPutTest1() {
     assertDoesNotThrow(() -> {
-      client.customPut("test/all", Map.of("query", "parameters"), Map.of("body", "parameters"));
+      client.customPut(
+        "test/all",
+        new HashMap() {
+          {
+            put("query", "parameters");
+          }
+        },
+        new HashMap() {
+          {
+            put("body", "parameters");
+          }
+        }
+      );
     });
     EchoResponse req = echo.getLastResponse();
     assertEquals("/test/all", req.path);
@@ -1120,8 +1236,8 @@ class IngestionClientRequestsTests {
       client.listAuthentications(
         2,
         1,
-        List.of(AuthenticationType.BASIC, AuthenticationType.ALGOLIA),
-        List.of(PlatformNone.NONE),
+        Arrays.asList(AuthenticationType.BASIC, AuthenticationType.ALGOLIA),
+        Arrays.asList(PlatformNone.NONE),
         AuthenticationSortKeys.CREATED_AT,
         OrderKeys.ASC
       );
@@ -1249,11 +1365,12 @@ class IngestionClientRequestsTests {
     assertDoesNotThrow(() -> {
       client.pushTask(
         "6c02aeb1-775e-418e-870b-1faccd4b2c0f",
-        new BatchWriteParams()
-          .setRequests(
-            List.of(
-              new BatchRequest().setAction(Action.ADD_OBJECT).setBody(Map.of("key", "bar", "foo", "1")),
-              new BatchRequest().setAction(Action.ADD_OBJECT).setBody(Map.of("key", "baz", "foo", "2"))
+        new PushTaskPayload()
+          .setAction(Action.ADD_OBJECT)
+          .setRecords(
+            Arrays.asList(
+              new PushTaskRecords().setAdditionalProperty("key", "bar").setAdditionalProperty("foo", "1").setObjectID("o"),
+              new PushTaskRecords().setAdditionalProperty("key", "baz").setAdditionalProperty("foo", "2").setObjectID("k")
             )
           )
       );
@@ -1263,7 +1380,7 @@ class IngestionClientRequestsTests {
     assertEquals("POST", req.method);
     assertDoesNotThrow(() ->
       JSONAssert.assertEquals(
-        "{\"requests\":[{\"action\":\"addObject\",\"body\":{\"key\":\"bar\",\"foo\":\"1\"}},{\"action\":\"addObject\",\"body\":{\"key\":\"baz\",\"foo\":\"2\"}}]}",
+        "{\"action\":\"addObject\",\"records\":[{\"key\":\"bar\",\"foo\":\"1\",\"objectID\":\"o\"},{\"key\":\"baz\",\"foo\":\"2\",\"objectID\":\"k\"}]}",
         req.body,
         JSONCompareMode.STRICT
       )
@@ -1277,8 +1394,8 @@ class IngestionClientRequestsTests {
       client.runSource(
         "6c02aeb1-775e-418e-870b-1faccd4b2c0f",
         new RunSourcePayload()
-          .setIndexToInclude(List.of("products_us", "products eu"))
-          .setEntityIDs(List.of("1234", "5678"))
+          .setIndexToInclude(Arrays.asList("products_us", "products eu"))
+          .setEntityIDs(Arrays.asList("1234", "5678"))
           .setEntityType(EntityType.PRODUCT)
       );
     });
@@ -1324,7 +1441,7 @@ class IngestionClientRequestsTests {
     assertDoesNotThrow(() -> {
       client.searchAuthentications(
         new AuthenticationSearch()
-          .setAuthenticationIDs(List.of("6c02aeb1-775e-418e-870b-1faccd4b2c0f", "947ac9c4-7e58-4c87-b1e7-14a68e99699a"))
+          .setAuthenticationIDs(Arrays.asList("6c02aeb1-775e-418e-870b-1faccd4b2c0f", "947ac9c4-7e58-4c87-b1e7-14a68e99699a"))
       );
     });
     EchoResponse req = echo.getLastResponse();
@@ -1344,7 +1461,8 @@ class IngestionClientRequestsTests {
   void searchDestinationsTest() {
     assertDoesNotThrow(() -> {
       client.searchDestinations(
-        new DestinationSearch().setDestinationIDs(List.of("6c02aeb1-775e-418e-870b-1faccd4b2c0f", "947ac9c4-7e58-4c87-b1e7-14a68e99699a"))
+        new DestinationSearch()
+          .setDestinationIDs(Arrays.asList("6c02aeb1-775e-418e-870b-1faccd4b2c0f", "947ac9c4-7e58-4c87-b1e7-14a68e99699a"))
       );
     });
     EchoResponse req = echo.getLastResponse();
@@ -1364,7 +1482,7 @@ class IngestionClientRequestsTests {
   void searchSourcesTest() {
     assertDoesNotThrow(() -> {
       client.searchSources(
-        new SourceSearch().setSourceIDs(List.of("6c02aeb1-775e-418e-870b-1faccd4b2c0f", "947ac9c4-7e58-4c87-b1e7-14a68e99699a"))
+        new SourceSearch().setSourceIDs(Arrays.asList("6c02aeb1-775e-418e-870b-1faccd4b2c0f", "947ac9c4-7e58-4c87-b1e7-14a68e99699a"))
       );
     });
     EchoResponse req = echo.getLastResponse();
@@ -1386,7 +1504,11 @@ class IngestionClientRequestsTests {
       client.searchTasks(
         new TaskSearch()
           .setTaskIDs(
-            List.of("6c02aeb1-775e-418e-870b-1faccd4b2c0f", "947ac9c4-7e58-4c87-b1e7-14a68e99699a", "76ab4c2a-ce17-496f-b7a6-506dc59ee498")
+            Arrays.asList(
+              "6c02aeb1-775e-418e-870b-1faccd4b2c0f",
+              "947ac9c4-7e58-4c87-b1e7-14a68e99699a",
+              "76ab4c2a-ce17-496f-b7a6-506dc59ee498"
+            )
           )
       );
     });
@@ -1409,7 +1531,11 @@ class IngestionClientRequestsTests {
       client.searchTasksV1(
         new TaskSearch()
           .setTaskIDs(
-            List.of("6c02aeb1-775e-418e-870b-1faccd4b2c0f", "947ac9c4-7e58-4c87-b1e7-14a68e99699a", "76ab4c2a-ce17-496f-b7a6-506dc59ee498")
+            Arrays.asList(
+              "6c02aeb1-775e-418e-870b-1faccd4b2c0f",
+              "947ac9c4-7e58-4c87-b1e7-14a68e99699a",
+              "76ab4c2a-ce17-496f-b7a6-506dc59ee498"
+            )
           )
       );
     });
@@ -1432,7 +1558,11 @@ class IngestionClientRequestsTests {
       client.searchTransformations(
         new TransformationSearch()
           .setTransformationIDs(
-            List.of("6c02aeb1-775e-418e-870b-1faccd4b2c0f", "947ac9c4-7e58-4c87-b1e7-14a68e99699a", "76ab4c2a-ce17-496f-b7a6-506dc59ee498")
+            Arrays.asList(
+              "6c02aeb1-775e-418e-870b-1faccd4b2c0f",
+              "947ac9c4-7e58-4c87-b1e7-14a68e99699a",
+              "76ab4c2a-ce17-496f-b7a6-506dc59ee498"
+            )
           )
       );
     });
@@ -1464,7 +1594,17 @@ class IngestionClientRequestsTests {
   @DisplayName("tryTransformation")
   void tryTransformationTest() {
     assertDoesNotThrow(() -> {
-      client.tryTransformation(new TransformationTry().setCode("foo").setSampleRecord(Map.of("bar", "baz")));
+      client.tryTransformation(
+        new TransformationTry()
+          .setCode("foo")
+          .setSampleRecord(
+            new HashMap() {
+              {
+                put("bar", "baz");
+              }
+            }
+          )
+      );
     });
     EchoResponse req = echo.getLastResponse();
     assertEquals("/1/transformations/try", req.path);
@@ -1481,9 +1621,15 @@ class IngestionClientRequestsTests {
       client.tryTransformation(
         new TransformationTry()
           .setCode("foo")
-          .setSampleRecord(Map.of("bar", "baz"))
+          .setSampleRecord(
+            new HashMap() {
+              {
+                put("bar", "baz");
+              }
+            }
+          )
           .setAuthentications(
-            List.of(
+            Arrays.asList(
               new AuthenticationCreate()
                 .setType(AuthenticationType.OAUTH)
                 .setName("authName")
@@ -1510,7 +1656,15 @@ class IngestionClientRequestsTests {
     assertDoesNotThrow(() -> {
       client.tryTransformationBeforeUpdate(
         "6c02aeb1-775e-418e-870b-1faccd4b2c0f",
-        new TransformationTry().setCode("foo").setSampleRecord(Map.of("bar", "baz"))
+        new TransformationTry()
+          .setCode("foo")
+          .setSampleRecord(
+            new HashMap() {
+              {
+                put("bar", "baz");
+              }
+            }
+          )
       );
     });
     EchoResponse req = echo.getLastResponse();
@@ -1529,9 +1683,15 @@ class IngestionClientRequestsTests {
         "6c02aeb1-775e-418e-870b-1faccd4b2c0f",
         new TransformationTry()
           .setCode("foo")
-          .setSampleRecord(Map.of("bar", "baz"))
+          .setSampleRecord(
+            new HashMap() {
+              {
+                put("bar", "baz");
+              }
+            }
+          )
           .setAuthentications(
-            List.of(
+            Arrays.asList(
               new AuthenticationCreate()
                 .setType(AuthenticationType.OAUTH)
                 .setName("authName")
@@ -1639,8 +1799,8 @@ class IngestionClientRequestsTests {
           .setName("sourceName")
           .setInput(
             new SourceCommercetools()
-              .setStoreKeys(List.of("myStore"))
-              .setLocales(List.of("de"))
+              .setStoreKeys(Arrays.asList("myStore"))
+              .setLocales(Arrays.asList("de"))
               .setUrl("http://commercetools.com")
               .setProjectKey("keyID")
           )
